--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Front-end Web Developer">
-    <meta name="description" content="Personal Website">
+    <meta name="description" content="Personal Portfolio Website">
     <meta name="author" content="Mohanad Alsamaneh">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Mohanad Resume</title>
 </head>
 <body>
-    
+
+    <header>
+        
+    </header>    
+
 </body>
 </html>
