Add header & main section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,27 @@
 <body>
 
     <header>
-        
-    </header>    
+        <a href="#" class="logo">Mohanad</a>
+        <nav class="navigation">
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <section class="main">
+        <div>
+            <h2>Hello, I'm Mohanad<br><span>Front-end Web Developer</span></h2>
+            <h3>I build Progressive Websites</h3>
+            <a href="#project" class="main-btn">view my work</a>
+            <div class="social-icons">
+                <a href="#"><i class="fas fa-envelope-square"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                <a href="#"><i class="fab fa-github-square"></i></a>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
