--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <a href="#" class="logo">Mohanad</a>
+        <a href="#" class="logo" target="_top">Mohanad</a>
         <nav class="navigation">
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
@@ -28,10 +28,10 @@
             <h3>I build Progressive Websites</h3>
             <a href="#project" class="main-btn">view my work</a>
             <div class="social-icons">
-                <a href="#"><i class="fas fa-envelope-square"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-twitter-square"></i></a>
-                <a href="#"><i class="fab fa-github-square"></i></a>
+                <a href="#" target="_blank"><i class="fas fa-envelope-square"></i></a>
+                <a href="#"target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-twitter-square" ></i></a>
+                <a href="https://github.com/MohanadLinux" target="_blank"><i class="fab fa-github-square"></i></a>
             </div>
         </div>
     </section>
