--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Front-end Web Developer">
     <meta name="description" content="Personal Portfolio Website">
     <meta name="author" content="Mohanad Alsamaneh">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Mohanad Resume</title>
 </head>
@@ -16,7 +16,7 @@
     <header>
         <a href="#" class="logo" target="_top">Mohanad</a>
         <nav class="navigation">
-            <a href="#about">About</a>
+            <a href="#services">Services</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -28,13 +28,68 @@
             <h3>I build Progressive Websites</h3>
             <a href="#project" class="main-btn">view my work</a>
             <div class="social-icons">
-                <a href="#" target="_blank"><i class="fas fa-envelope-square"></i></a>
-                <a href="#"target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-twitter-square" ></i></a>
-                <a href="https://github.com/MohanadLinux" target="_blank"><i class="fab fa-github-square"></i></a>
+                <a href="#" target="_blank" title="Email"><i class="fas fa-envelope-square"></i></a>
+                <a href="#"target="_blank" title="linkedin"><i class="fab fa-linkedin"></i></a>
+                <a href="#" target="_blank" title="Twitter"><i class="fab fa-twitter-square" ></i></a>
+                <a href="https://github.com/MohanadLinux" target="_blank" title="Github" rel="noopener noreferrer"><i class="fab fa-github-square"></i></a>
             </div>
         </div>
     </section>
 
+    <section class="cards" id="services">
+        <div class="centralizing">
+            <h2 class="title">Services</h2>
+            <div class="content">
+                <div class="card">
+                    <div class="icon">
+                        <i><img src="./images/Website-Responsive.svg" alt=""></i>
+                    </div>
+                    <div class="info">
+                        <h3>Progressive Web</h3>
+                        <p>
+                            build a Progressive Web App from scratch or with WordPress
+                            <!-- <ul class="inside">
+                                <li>Build a Progressive Web App</li>
+                                <li>WordPress developer</li>
+                                <li>html/css and javascript</li>
+                            </ul> -->
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="icon">
+                        <i><img src="./images/Lighthouse2.svg" alt=""></i>
+                    </div>
+                    <div class="info">
+                        <h3>Web performance</h3>
+                        <p>
+                            <ul class="inside">
+                                <li>progressive web apps</li>
+                                <li>WordPress developer</li>
+                                <li>progressive web apps</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="icon">
+                        <i><img src="./images/file-code.svg" alt=""></i>
+                    </div>
+                    <div class="info">
+                        <h3>Script Code</h3>
+                        <p>
+                            <ul class="inside">
+                                <li>progressive web apps</li>
+                                <li>WordPress developer</li>
+                                <li>progressive web apps</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
