Adding Project section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div>
             <h2>Hello, I'm Mohanad<br><span>Front-end Web Developer</span></h2>
             <h3>I build Progressive Websites</h3>
-            <a href="#project" class="main-btn">view my work</a>
+            <a href="#projects" class="main-btn">view my work</a>
             <div class="social-icons">
                 <a href="#" target="_blank" title="Email"><i class="fas fa-envelope-square"></i></a>
                 <a href="#"target="_blank" title="linkedin"><i class="fab fa-linkedin"></i></a>
@@ -42,7 +42,7 @@
             <div class="content">
                 <div class="card">
                     <div class="icon">
-                        <i><img src="./images/Website-Responsive.svg" alt=""></i>
+                        <i><img src="./images/Website-Responsive.svg" alt="Progressive Web"></i>
                     </div>
                     <div class="info">
                         <h3>Progressive Web</h3>
@@ -59,7 +59,7 @@
 
                 <div class="card">
                     <div class="icon">
-                        <i><img src="./images/Lighthouse2.svg" alt=""></i>
+                        <i><img src="./images/Lighthouse2.svg" alt="Web performance"></i>
                     </div>
                     <div class="info">
                         <h3>Web performance</h3>
@@ -75,7 +75,7 @@
 
                 <div class="card">
                     <div class="icon">
-                        <i><img src="./images/file-code.svg" alt=""></i>
+                        <i><img src="./images/file-code.svg" alt="Script Code"></i>
                     </div>
                     <div class="info">
                         <h3>Script Code</h3>
@@ -90,6 +90,51 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="projects" id="projects">
+        <div class="centralizing">
+            <h2 class="title" id="projects-title">Projects</h2>
+            <div class="content">
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="./images/gamaxos2.png" alt="gamaxos">
+                        <div class="project-info">
+                            <p class="project-category">E-commercial Website</p>
+                            <strong class="project-title">
+                                <span>GAMAXOS</span>
+                                <a href="https://gamaxos.com/" class="see-project" target="_blank">See project</a>
+                            </strong>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="./images/gamaxos2.png" alt="gamaxos">
+                        <div class="project-info">
+                            <p class="project-category">E-commercial Website</p>
+                            <strong class="project-title">
+                                <span>GAMAXOS</span>
+                                <a href="https://gamaxos.com/" class="see-project" target="_blank">See project</a>
+                            </strong>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="./images/gamaxos2.png" alt="gamaxos">
+                        <div class="project-info">
+                            <p class="project-category">E-commercial Website</p>
+                            <strong class="project-title">
+                                <span>GAMAXOS</span>
+                                <a href="https://gamaxos.com/" class="see-project" target="_blank">See project</a>
+                            </strong>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+
     </section>
 </body>
 </html>
