Adding resume section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <nav class="navigation">
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
+            <a href="#resume">Resume</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -133,8 +134,34 @@
                 </div>
             </div>
         </div>
-        
+    </section>
+    <section class="resume" id="resume">
+        <div class="centralizing">
+            <h2 class="title" id="resume-title">Resume</h2>
+            <div class="content" id="resume-content">
+                <div class="div-resume" id="summary">
+                    <p id="p-summary">
+                        <span id="summary-header">Resume summary</span><br>
 
+                        <span class="col-header">ACADEMIC QUALIFICATION:</span><br>
+                        Bachelor Degree in Computer Science - 2008<br>
+                        Oracle Database 10g - 2009<br><br>
+
+                        <span class="col-header">SKILLS:</span><br>
+                        <span class="row-header">Operating Systems:</span> Windos, Linux<br>
+                        <span class="row-header">Programming Languages:</span> HTML & CSS, Javascript, Python, SQL<br>
+                        <span class="row-header">Assistant skills:</span> Git, GitHub, Maintenance (+A)<br><br>
+
+                        <span class="col-header">LANGUAGES:</span><br>
+                        Arabic, English, Romanian
+                    </p>
+                </div>
+                <div class="div-resume" id="pdf">
+                    <p>Download<br><span>my resume</span></p>
+                    <a href="./files/MohanadResume.pdf" target="_blank"><img src="./images/resume1.svg" alt="Mohanad resume"></a>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
