--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Mohanad Resume</title>
 </head>
 <body>
-
+    <!-- ########## 1- Nav section ########## -->
     <header>
         <a href="#" class="logo" target="_top">Mohanad</a>
         <nav class="navigation">
@@ -22,7 +22,7 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
-
+    <!-- ########## 2- Main section ##########  -->
     <section class="main">
         <div>
             <h2>Hello, I'm Mohanad<br><span>Front-end Web Developer</span></h2>
@@ -36,7 +36,7 @@
             </div>
         </div>
     </section>
-
+    <!-- ########## 3- Services section ########## -->
     <section class="cards" id="services">
         <div class="centralizing">
             <h2 class="title">Services</h2>
@@ -92,6 +92,7 @@
             </div>
         </div>
     </section>
+    <!-- ########## 4- Projects section ########## -->
     <section class="projects" id="projects">
         <div class="centralizing">
             <h2 class="title" id="projects-title">Projects</h2>
@@ -135,6 +136,7 @@
             </div>
         </div>
     </section>
+    <!-- ########## 5- Resume section ########## -->
     <section class="resume" id="resume">
         <div class="centralizing">
             <h2 class="title" id="resume-title">Resume</h2>
@@ -163,5 +165,16 @@
             </div>
         </div>
     </section>
+    <!-- ########## 6- Footer ########## -->
+    <footer id="contact">
+        <div class="footer-div">
+            <i class="fas fa-envelope"></i>&nbsp;<a href="mailto:mohanadlinux@gmail.com" target="_blank">mohanadlinux@gmail.com</a>&nbsp;&nbsp;|&nbsp;
+            <i class="fas fa-phone-alt"></i>&nbsp;<a href="tel:+905388774060" target="_blank">+90 53 8877 4060</a>&nbsp;&nbsp;|&nbsp;
+            <i class="fab fa-telegram-plane"></i>&nbsp;<a href="https://t.me/M83Linux" target="_blank">Telegram: @M83Linux</a>
+        </div>
+        <p>Copayright &copy; - 2022</p>
+    </footer>
+
+
 </body>
 </html>
