Make it Responsive

--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <meta name="author" content="Mohanad Alsamaneh">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/app.js" defer></script>
     <title>Mohanad Resume</title>
 </head>
 <body>
     <!-- ########## 1- Nav section ########## -->
     <header>
         <a href="#" class="logo" target="_top">Mohanad</a>
+        <a href="#" class="hamburger-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
         <nav class="navigation">
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
@@ -168,13 +174,11 @@
     <!-- ########## 6- Footer ########## -->
     <footer id="contact">
         <div class="footer-div">
-            <i class="fas fa-envelope"></i>&nbsp;<a href="mailto:mohanadlinux@gmail.com" target="_blank">mohanadlinux@gmail.com</a>&nbsp;&nbsp;|&nbsp;
-            <i class="fas fa-phone-alt"></i>&nbsp;<a href="tel:+905388774060" target="_blank">+90 53 8877 4060</a>&nbsp;&nbsp;|&nbsp;
-            <i class="fab fa-telegram-plane"></i>&nbsp;<a href="https://t.me/M83Linux" target="_blank">Telegram: @M83Linux</a>
+            <span>&nbsp;&nbsp;<i class="fas fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:mohanadlinux@gmail.com" target="_blank">mohanadlinux@gmail.com</a>&nbsp;&nbsp;</span>
+            <span>&nbsp;&nbsp;<i class="fas fa-phone-alt"></i>&nbsp;&nbsp;<a href="tel:+905388774060" target="_blank">+90 53 8877 4060</a>&nbsp;&nbsp;</span>
+            <span>&nbsp;&nbsp;<i class="fab fa-telegram-plane"></i>&nbsp;&nbsp;<a href="https://t.me/M83Linux" target="_blank" rel="noopener noreferrer">Telegram: @M83Linux</a>&nbsp;&nbsp;</span>
         </div>
         <p>Copayright &copy; - 2022</p>
     </footer>
-
-
 </body>
 </html>
