Solving responsive navbar

--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
 </head>
 <body>
     <!-- ########## 1- Nav section ########## -->
-    <header>
+    <header id="header">
         <a href="#" class="logo" target="_top">Mohanad</a>
-        <a href="#" class="hamburger-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </a>
-        <nav class="navigation">
-            <a href="#services">Services</a>
-            <a href="#projects">Projects</a>
-            <a href="#resume">Resume</a>
-            <a href="#contact">Contact</a>
+        <div id="toggle"></div>
+        <nav id="navbar">
+            <ul id="ulnavbar">
+                <li><a href="#services">Services</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <!-- ########## 2- Main section ##########  -->
@@ -55,11 +53,6 @@
                         <h3>Progressive Web</h3>
                         <p>
                             build a Progressive Web App from scratch or with WordPress
-                            <!-- <ul class="inside">
-                                <li>Build a Progressive Web App</li>
-                                <li>WordPress developer</li>
-                                <li>html/css and javascript</li>
-                            </ul> -->
                         </p>
                     </div>
                 </div>
