Modifying Services section & Navbar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header id="header">
         <a href="#" class="logo" target="_top">Mohanad</a>
         <div id="toggle"></div>
+        <div id="toggle2"></div>
         <nav id="navbar">
             <ul id="ulnavbar">
                 <li><a href="#services">Services</a></li>
@@ -53,7 +54,7 @@
                     <div class="info">
                         <h3>Progressive Web</h3>
                         <p>
-                            build a Progressive Web App from scratch or with WordPress
+                            build a Progressive Web from scratch or with WordPress
                         </p>
                     </div>
                 </div>
@@ -65,10 +66,11 @@
                     <div class="info">
                         <h3>Web performance</h3>
                         <p>
-                            <ul class="inside">
-                                <li>progressive web apps</li>
-                                <li>WordPress developer</li>
-                                <li>progressive web apps</li>
+                            <ul class="inside" id="inside-web">
+                                <li>High performance</li>
+                                <li>progressive web app (PWA)</li>
+                                <li>Search Engine Optimization (SEO)</li>
+                                <li>Accessibility</li>
                             </ul>
                         </p>
                     </div>
@@ -79,12 +81,11 @@
                         <i><img src="./images/file-code.svg" alt="Script Code"></i>
                     </div>
                     <div class="info">
-                        <h3>Script Code</h3>
+                        <h3>Scripting</h3>
                         <p>
                             <ul class="inside">
-                                <li>progressive web apps</li>
-                                <li>WordPress developer</li>
-                                <li>progressive web apps</li>
+                                <li>HTML & CSS (+Bootstrap)</li>
+                                <li>JavaScript (+jQuery)</li>
                             </ul>
                         </p>
                     </div>
@@ -104,7 +105,8 @@
                             <p class="project-category">E-commercial Website</p>
                             <strong class="project-title">
                                 <span>GAMAXOS</span>
-                                <a href="https://gamaxos.com/" class="see-project" target="_blank">See project</a>
+                                <a href="https://gamaxos.com/" class="see-project" target="_blank" 
+                                rel="noopener noreferrer" title="gamaxos">See project</a>
                             </strong>
                         </div>
                     </div>
@@ -116,7 +118,8 @@
                             <p class="project-category">E-commercial Website</p>
                             <strong class="project-title">
                                 <span>GAMAXOS</span>
-                                <a href="https://gamaxos.com/" class="see-project" target="_blank">See project</a>
+                                <a href="https://gamaxos.com/" class="see-project" target="_blank" 
+                                rel="noopener noreferrer" title="gamaxos">See project</a>
                             </strong>
                         </div>
                     </div>
@@ -128,7 +131,8 @@
                             <p class="project-category">E-commercial Website</p>
                             <strong class="project-title">
                                 <span>GAMAXOS</span>
-                                <a href="https://gamaxos.com/" class="see-project" target="_blank">See project</a>
+                                <a href="https://gamaxos.com/" class="see-project" target="_blank" 
+                                rel="noopener noreferrer" title="gamaxos">See project</a>
                             </strong>
                         </div>
                     </div>
@@ -145,16 +149,16 @@
                     <p id="p-summary">
                         <span id="summary-header">Resume summary</span><br>
 
-                        <span class="col-header">ACADEMIC QUALIFICATION:</span><br>
+                        <span class="col-header"><strong>ACADEMIC QUALIFICATION:</strong></span><br>
                         Bachelor Degree in Computer Science - 2008<br>
                         Oracle Database 10g - 2009<br><br>
 
-                        <span class="col-header">SKILLS:</span><br>
-                        <span class="row-header">Operating Systems:</span> Windos, Linux<br>
-                        <span class="row-header">Programming Languages:</span> HTML & CSS, Javascript, Python, SQL<br>
-                        <span class="row-header">Assistant skills:</span> Git, GitHub, Maintenance (+A)<br><br>
+                        <span class="col-header"><strong>SKILLS:</strong></span><br>
+                        <span class="row-header"><strong>Operating Systems:</strong></span> Windows, Linux<br>
+                        <span class="row-header"><strong>Programming Languages:</strong></span> HTML & CSS, Javascript, Python, SQL<br>
+                        <span class="row-header"><strong>Assistant skills:</strong></span> Git, GitHub, Maintenance (+A)<br><br>
 
-                        <span class="col-header">LANGUAGES:</span><br>
+                        <span class="col-header"><strong>LANGUAGES:</strong></span><br>
                         Arabic, English, Romanian
                     </p>
                 </div>
