Modifying Resume section color

--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
                     <p id="p-summary">
                         <span id="summary-header">Resume summary</span><br>
 
-                        <span class="col-header"><strong>ACADEMIC QUALIFICATION:</strong></span><br>
-                        Bachelor Degree in Computer Science - 2008<br>
-                        Oracle Database 10g - 2009<br><br>
+                        <span class="col-header">ACADEMIC QUALIFICATION:</span><br>
+                        <span class="row-header">Bachelor Degree in Computer Science - 2008</span><br>
+                        <span class="row-header">Oracle Database 10g - 2009</span><br><br>
 
-                        <span class="col-header"><strong>SKILLS:</strong></span><br>
-                        <span class="row-header"><strong>Operating Systems:</strong></span> Windows, Linux<br>
-                        <span class="row-header"><strong>Programming Languages:</strong></span> HTML & CSS, Javascript, Python, SQL<br>
-                        <span class="row-header"><strong>Assistant skills:</strong></span> Git, GitHub, Maintenance (+A)<br><br>
+                        <span class="col-header">SKILLS:</span><br>
+                        <span>Operating Systems:<span class="row-header"> Windows, Linux</span></span><br>
+                        <span>Programming Languages:<span class="row-header"> HTML & CSS, Javascript, Python, SQL</span></span><br>
+                        <span>Assistant skills:<span class="row-header"> Git, GitHub, Maintenance (+A)</span></span><br><br>
 
-                        <span class="col-header"><strong>LANGUAGES:</strong></span><br>
-                        Arabic, English, Romanian
+                        <span class="col-header">LANGUAGES:</span><br>
+                        <span class="row-header">Arabic, English, Romanian</span>
                     </p>
                 </div>
                 <div class="div-resume" id="pdf">
