Editting images Folder

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <div class="card">
                     <div class="icon">
-                        <i><img src="./images/Lighthouse2.svg" alt="Web performance"></i>
+                        <i><img src="./images/Lighthouse.svg" alt="Web performance"></i>
                     </div>
                     <div class="info">
                         <h3>Web performance</h3>
@@ -100,7 +100,7 @@
             <div class="content">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./images/gamaxos2.png" alt="gamaxos">
+                        <img src="./images/gamaxos-img.png" alt="gamaxos">
                         <div class="project-info">
                             <p class="project-category">E-commercial Website</p>
                             <strong class="project-title">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./images/gamaxos2.png" alt="gamaxos">
+                        <img src="./images/gamaxos-img.png" alt="gamaxos">
                         <div class="project-info">
                             <p class="project-category">E-commercial Website</p>
                             <strong class="project-title">
@@ -126,7 +126,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./images/gamaxos2.png" alt="gamaxos">
+                        <img src="./images/gamaxos-img.png" alt="gamaxos">
                         <div class="project-info">
                             <p class="project-category">E-commercial Website</p>
                             <strong class="project-title">
@@ -164,7 +164,7 @@
                 </div>
                 <div class="div-resume" id="pdf">
                     <p>Download<br><span>my resume</span></p>
-                    <a href="./files/MohanadResume.pdf" target="_blank"><img src="./images/resume1.svg" alt="Mohanad resume"></a>
+                    <a href="./files/MohanadResume.pdf" target="_blank"><img src="./images/resume.svg" alt="Mohanad resume"></a>
                 </div>
             </div>
         </div>
