Add card to Projects section

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./images/gamaxos-img.png" alt="gamaxos">
+                        <img src="./images/portfolio-img.png" alt="My portfolio">
                         <div class="project-info">
-                            <p class="project-category">E-commercial Website</p>
+                            <p class="project-category">My portfolio Website</p>
                             <strong class="project-title">
-                                <span>GAMAXOS</span>
-                                <a href="https://gamaxos.com/" class="see-project" target="_blank" 
-                                rel="noopener noreferrer" title="gamaxos">See project</a>
+                                <span>Portfolio</span>
+                                <a href="#" target="_top" class="see-project" 
+                                title="portfolio">See project</a>
                             </strong>
                         </div>
                     </div>
