--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <h3>I build Progressive Websites</h3>
             <a href="#projects" class="main-btn">view my work</a>
             <div class="social-icons">
-                <a href="#" target="_blank" title="Email"><i class="fas fa-envelope-square"></i></a>
-                <a href="#"target="_blank" title="linkedin"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="_blank" title="Twitter"><i class="fab fa-twitter-square" ></i></a>
+                <a href="mailto:mohanadlinux@gmail.com" target="_blank" title="Email"><i class="fas fa-envelope-square"></i></a>
+                <a href="https://www.linkedin.com/in/mohanad-alsamaneh-028a48b2/"target="_blank" title="linkedin"><i class="fab fa-linkedin"></i></a>
+                <a href="https://twitter.com/M83linux" target="_blank" title="Twitter"><i class="fab fa-twitter-square" ></i></a>
                 <a href="https://github.com/MohanadLinux" target="_blank" title="Github" rel="noopener noreferrer"><i class="fab fa-github-square"></i></a>
             </div>
         </div>
