--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./images/gamaxos-img.png" alt="gamaxos">
+                        <img src="./images/zafatycafe-img.png" alt="ZafatyCafe">
                         <div class="project-info">
-                            <p class="project-category">E-commercial Website</p>
+                            <p class="project-category">Cafe and sweet bakery</p>
                             <strong class="project-title">
-                                <span>GAMAXOS</span>
-                                <a href="https://gamaxos.com/" class="see-project" target="_blank" 
+                                <span>ZafatyCafe</span>
+                                <a href="https://zafatycafe.com/" class="see-project" target="_blank" 
                                 rel="noopener noreferrer" title="gamaxos">See project</a>
                             </strong>
                         </div>
